#ctfooter overflow hidden (prevents header components from blocking elements higher on the page)

--- a/cantools/css/ct.css
+++ b/cantools/css/ct.css
@@ -664,6 +664,7 @@
     right: 0px;
     left: 0px;
     height: 120px;
+    overflow: hidden;
 }
 .ctlist {
     position: absolute;
